--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,15 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>ticket_system</name>
     <description>ticket management system</description>
+
+    <developers>
+        <developer>
+            <name>Tamás Gyenese</name>
+            <email>gyenesetomi@gmail.com</email>
+            <timezone>+2</timezone>
+        </developer>
+    </developers>
+
     <properties>
         <java.version>11</java.version>
     </properties>
