--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>api</artifactId>
+    <packaging>jar</packaging>
+    <version>0.0.1-SNAPSHOT</version>
+
 
     <dependencies>
         <dependency>
