--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <module>ticket</module>
         <module>core</module>
         <module>api</module>
-        <module>partner</module>
+        <module>systemApplication</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,6 +31,7 @@
 
     <properties>
         <java.version>11</java.version>
+        <start-class>com.bt.collab.alu.core.webapp.Application</start-class>
     </properties>
     <dependencies>
         <dependency>
@@ -53,6 +54,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
