--- a/systemApplication/pom.xml
+++ b/systemApplication/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.gyenese</groupId>
+            <artifactId>ticket</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
