--- a/systemApplication/pom.xml
+++ b/systemApplication/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>partner</artifactId>
+    <artifactId>system_application</artifactId>
 
     <dependencies>
         <dependency>
