--- a/systemApplication/pom.xml
+++ b/systemApplication/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>com.gyenese</groupId>
-            <artifactId>ticket</artifactId>
+            <artifactId>ticketmodule</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
