--- a/ticketmodule/pom.xml
+++ b/ticketmodule/pom.xml
@@ -9,10 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ticket</artifactId>
-    <packaging>jar</packaging>
-    <version>0.0.1-SNAPSHOT</version>
-
+    <artifactId>ticketmodule</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.gyenese</groupId>
@@ -20,5 +17,6 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
