--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,12 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ticket_system</artifactId>
         <groupId>com.gyenese</groupId>
+        <artifactId>ticket_system</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.gyenese</groupId>
     <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
