add basic auth with spring security

--- a/systemApplication/src/main/resources/application.properties
+++ b/systemApplication/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8989
 spring.jackson.default-property-inclusion = non_null
+spring.security.user.name=user
+spring.datasource.password=foo
